--- a/www/templates/tab-case.html
+++ b/www/templates/tab-case.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Report Case" cache-view="true">
   <ion-content class="padding">
     <h2>Welcome to Ionic</h2>
     <p>
