--- a/www/templates/tab-case.html
+++ b/www/templates/tab-case.html
@@ -1,17 +1,66 @@
 <ion-view view-title="Report Case" cache-view="true">
-  <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
-    <p>
-    This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
-    </p>
-    <p>
-      To edit the content of each tab, edit the corresponding template file in <code>www/templates/</code>. This template is <code>www/templates/tab-dash.html</code>
-    </p>
-    <p>
-    If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
-    </p>
-    <p>
-      For help sending push notifications, join the <a href="https://apps.ionic.io/signup" target="_blank">Ionic Platform</a> and check out <a href="http://docs.ionic.io/docs/push-overview" target="_blank">Ionic Push</a>. We also have other services available.
-    </p>
-  </ion-content>
+
+	<ion-nav-buttons side="left">
+      <button class="button button-icon icon ion-camera" ng-click="attachPicture()"> 
+      </button>
+    </ion-nav-buttons>
+    
+	<ion-nav-buttons side="right">
+      <button class="button button-icon icon ion-ios-paperplane" ng-click=submitCase()>
+      </button>
+    </ion-nav-buttons>
+   
+
+   <ion-content class="padding">
+    
+    <form>
+    	<h4>Case Information</h4>
+        <div class="list">	
+            <label class="item item-input">
+                <span class="input-label">Date</span>
+                <input type="date"  ng-model="newcase.date">
+            </label>
+            
+             <label class="item item-input">
+                <span class="input-label">Building</span>
+                <select ng-model="newcase.building">
+                	<option>Changi Mall</option>
+                	<option>NTUC FairPrice</option>
+                	<option>One Marina Boulevard</option>
+                	<option>One Raffles Quay</option>
+                </select>
+            </label>
+            
+            <label class="item item-input">
+                <span class="input-label">Details of Location</span>
+                <textarea rows="3" ng-model="newcase.location"></textarea>
+            </label>
+            
+            <label class="item item-input">
+                <span class="input-label">Remarks</span>
+                <textarea rows="3" ng-model="newcase.remarks"></textarea>
+            </label>
+          </div>
+          
+          <h4>How do we contact you?</h4>
+          <div class="list">	
+            <label class="item item-input">
+                <span class="input-label">Mobile Number</span>
+                <input  type="tel" ng-model="newcase.mobileNumber">
+            </label>
+            
+            <label class="item item-input">
+                <span class="input-label">Email Address</span>
+                <input  type="text" ng-model="newcase.emailAddress">
+            </label>
+            
+            
+        </div>
+       
+      </form>
+      
+      <br/>
+      <img src="" id="pic" name="pic" src="100" width="200"/>
+      
+    </ion-content>
 </ion-view>
