Fixed the submitCase function

--- a/www/templates/tab-case.html
+++ b/www/templates/tab-case.html
@@ -6,7 +6,7 @@
     </ion-nav-buttons>
     
 	<ion-nav-buttons side="right">
-      <button class="button button-icon icon ion-ios-paperplane" ng-click=submitCase()>
+      <button class="button button-icon icon ion-ios-paperplane" ng-click="submitCase()">
       </button>
     </ion-nav-buttons>
    
